2009-11-23  Robert Millan  <rmh.grub@aybabtu.com>

	* script/sh/execute.c: Move from here ...
	* script/execute.c: ... to here.  Update all users.
	* script/sh/function.c: Move from here ...
	* script/function.c: ... to here.  Update all users.
	* script/sh/lexer.c: Move from here ...
	* script/lexer.c: ... to here.  Update all users.
	* script/sh/main.c: Move from here ...
	* script/main.c: ... to here.  Update all users.
	* script/sh/parser.y: Move from here ...
	* script/parser.y: ... to here.  Update all users.
	* script/sh/script.c: Move from here ...
	* script/script.c: ... to here.  Update all users.

2009-11-23  Robert Millan  <rmh.grub@aybabtu.com>

	* configure.ac: Detect all `emu' platforms.  Define
	GRUB_MACHINE_* macros in TARGET_CFLAGS.  Remove
	--enable-grub-emu logic.  Disable include/grub/machine
	symlink on `emu' platforms.

	* genkernsyms.sh.in: Use @TARGET_CFLAGS@ during symbol generation.
	* gensymlist.sh.in: Likewise.

	* include/grub/i386/coreboot/machine.h: Remove file.
	* include/grub/i386/efi/machine.h: Likewise.
	* include/grub/i386/ieee1275/machine.h: Likewise.
	* include/grub/i386/pc/machine.h: Likewise.
	* include/grub/i386/qemu/machine.h: Likewise.
	* include/grub/powerpc/ieee1275/machine.h: Likewise.
	* include/grub/sparc64/ieee1275/machine.h: Likewise.
	* include/grub/x86_64/efi/machine.h: Likewise.

	* commands/acpi.c: Remove `<grub/machine/machine.h>'.
	* commands/halt.c: Likewise.
	* commands/reboot.c: Likewise.
	* include/grub/autoefi.h: Likewise.
	* include/grub/i386/at_keyboard.h: Likewise.
	* include/grub/i386/kernel.h: Likewise.
	* include/grub/i386/loader.h: Likewise.
	* include/grub/i386/pc/memory.h: Likewise.
        * kern/dl.c: Likewise.
	* kern/i386/coreboot/init.c: Likewise.
	* loader/i386/bsd.c: Likewise.
	* loader/i386/linux.c: Likewise.
	* loader/multiboot_loader.c: Likewise.
	* term/i386/pc/serial.c: Likewise.
	* term/usb_keyboard.c: Likewise.

	* include/grub/time.h [!GRUB_MACHINE_EMU]: Remove